plugins/devkit/devkit-kotlin-tests/testData/inspections/lightServiceMustBeFinal/MakeNotOpen.kt
import com.intellij.openapi.components.Service

@Service
open class <error descr="Light service must not be open">MyService<caret></error>